correct footnote spacing, add CSS rules

--- a/website/themes/dark/assets/css/styles.css
+++ b/website/themes/dark/assets/css/styles.css
@@ -303,6 +303,11 @@ nav.breadcrumb {
 	background-color: #e02300;
 }
 
+.footnote-reference {
+	vertical-align: super;
+	font-size: smaller;
+}
+
 .footer {
 	clear: both;
 	overflow: hidden;
